# zresp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
agent-docs/init/: no1-development-rules.md
app/: __init__.py  config.py  main.py
app/routers/: cache.py  content.py  echo.py  response.py
app/services/: content.py  payload.py  request_info.py
app/static/: style.css
app/static/samples/: README.md
app/templates/: base.html  index.html  inspect.html
certs/: .gitignore  README.md
deploy/: nginx.conf
tests/: test_cache.py  test_content.py  test_cors.py  test_echo.py  test_response.py
